<resources>
    <string name="app_name">Contact Saver</string>
    <string name="form_username">Name</string>
    <string name="pick_date">Pick Date</string>
    <string name="string_date">Birthday Date</string>
    <string name="form_phone">Phone</string>
    <string name="form_email">Email</string>
    <string name="form_description">Description</string>
    <string name="next_activity">Next</string>
    <string name="año">Year</string>
    <string name="mes">Month</string>
    <string name="dia">Day</string>
    <string name="enero">January</string>
    <string name="febrero">February</string>
    <string name="marzo">March</string>
    <string name="abril">April</string>
    <string name="mayo">May</string>
    <string name="junio">June</string>
    <string name="julio">July</string>
    <string name="agosto">August</string>
    <string name="sept">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dic">December</string>
    <string name="datos_confirmar">Confirm Contact</string>
    <string name="editar_datos">Edit Data</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
