<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorDivider"
    tools:context="com.lperdomoduran.contactsaver.ConfirmarDatos">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_username"
            android:textSize="@dimen/text_size_confirm"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textSize="@dimen/text_size_confirm"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_phone"
            android:textSize="@dimen/text_size_confirm"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_email"
            android:textSize="@dimen/text_size_confirm"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_description"
            android:textSize="@dimen/text_size_confirm2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:text="@string/editar_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEditarDatos"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
