<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider"
    tools:context="com.lperdomoduran.contactsaver.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_name"
                android:layout_width="@dimen/image_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/account" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tInUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/form_username" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/calendar_margin_left"
                android:text="@string/año"
                android:textSize="@dimen/text_size_año" />

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="@dimen/calendar_width"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/mes"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/text_size_año" />

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="@dimen/calendar_width"
                android:layout_height="150dp"
                android:background="@color/colorTextIcons"
                android:gravity="center"
                android:onClick="showDatePickerDialog"
                android:text="@string/dia"
                android:textSize="@dimen/text_size_dia" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_phone"
                android:layout_width="@dimen/image_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/phone" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tInPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_phone"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_email"
                android:layout_width="@dimen/image_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/email" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_description"
                android:layout_width="@dimen/image_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/format_float_left" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tInDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_description" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/next_activity"
        android:textColor="@color/colorTextIcons" />

</RelativeLayout>
